[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main/desk.png" type="Texture" id=1]
[ext_resource path="res://Main/cover.png" type="Texture" id=2]
[ext_resource path="res://Main/Meta.gd" type="Script" id=3]
[ext_resource path="res://SubmitReport/SubmitReport.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/soviet_computer.tres" type="DynamicFont" id=5]
[ext_resource path="res://Main/message.gd" type="Script" id=6]
[ext_resource path="res://Main/background.png" type="Texture" id=7]
[ext_resource path="res://Main/supervisor.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "close_cover0"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "close_cover1"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "close_cover2"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "close_cover3"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "open_cover1"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "open_cover2"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.301, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 0, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "open_cover3"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticScreen/cover_3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "silhouette"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("supervisor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "yelling"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("supervisor:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Base" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
z_index = -5
texture = ExtResource( 7 )
centered = false

[node name="supervisor" type="Sprite" parent="."]
position = Vector2( 297, 30 )
z_index = -1
texture = ExtResource( 8 )
centered = false
hframes = 3
frame = 2

[node name="StaticScreen" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="panel_0_spawn" type="Position2D" parent="StaticScreen"]
position = Vector2( 10, 112 )
z_as_relative = false

[node name="loadbar_0" type="ColorRect" parent="StaticScreen/panel_0_spawn"]
margin_left = 30.0
margin_top = -12.0
margin_right = 70.0
margin_bottom = -9.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_1_spawn" type="Position2D" parent="StaticScreen"]
position = Vector2( 131, 112 )
z_as_relative = false

[node name="loadbar_1" type="ColorRect" parent="StaticScreen/panel_1_spawn"]
margin_left = 30.0
margin_top = -12.0
margin_right = 70.0
margin_bottom = -9.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_2_spawn" type="Position2D" parent="StaticScreen"]
position = Vector2( 253, 112 )
z_as_relative = false

[node name="loadbar_2" type="ColorRect" parent="StaticScreen/panel_2_spawn"]
margin_left = 30.0
margin_top = -12.0
margin_right = 70.0
margin_bottom = -9.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_3_spawn" type="Position2D" parent="StaticScreen"]
position = Vector2( 374, 112 )
z_as_relative = false

[node name="loadbar_3" type="ColorRect" parent="StaticScreen/panel_3_spawn"]
margin_left = 30.0
margin_top = -13.0
margin_right = 70.0
margin_bottom = -10.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cover_0" type="Sprite" parent="StaticScreen"]
position = Vector2( 0, 96 )
texture = ExtResource( 2 )
centered = false
hframes = 8
frame = 7

[node name="cover_1" type="Sprite" parent="StaticScreen"]
position = Vector2( 120, 96 )
texture = ExtResource( 2 )
centered = false
hframes = 8
frame = 7

[node name="cover_2" type="Sprite" parent="StaticScreen"]
position = Vector2( 242, 96 )
texture = ExtResource( 2 )
centered = false
hframes = 8
frame = 7

[node name="cover_3" type="Sprite" parent="StaticScreen"]
position = Vector2( 363, 95 )
texture = ExtResource( 2 )
centered = false
hframes = 8
frame = 7

[node name="ShiftTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HeartBeat" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SubmitReport" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 111.503, 15.1191 )
z_index = 10

[node name="speech" type="Control" parent="."]
margin_left = 27.0883
margin_top = 19.5288
margin_right = 67.0883
margin_bottom = 59.5288
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="speech"]
margin_right = 210.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="speech/ColorRect"]
margin_left = 3.0
margin_top = 3.0
margin_right = 206.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GOOD MORNING COMRADE.  CONGRATULATIONS ON FINISHING YOU INITIAL QUALIFICATION. DON’T FORGET TO WRITE DOWN ALL RESULTS YOU COLLECT IN YOUR JOURNAL. THE AMERICANS HAVE BEEN QUIET LATELY SO DON’T EXPECT THAT MUCH ACTIVITY."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close_cover0 = SubResource( 1 )
anims/close_cover1 = SubResource( 2 )
anims/close_cover2 = SubResource( 3 )
anims/close_cover3 = SubResource( 4 )
anims/open_cover0 = SubResource( 5 )
anims/open_cover1 = SubResource( 6 )
anims/open_cover2 = SubResource( 7 )
anims/open_cover3 = SubResource( 8 )

[node name="AnimationPlayer_supervisor" type="AnimationPlayer" parent="."]
anims/silhouette = SubResource( 9 )
anims/yelling = SubResource( 10 )
[connection signal="timeout" from="ShiftTimer" to="." method="_on_ShiftTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="HeartBeat" to="." method="_on_HeartBeat_timeout"]
[connection signal="submitted" from="SubmitReport" to="." method="_on_SubmitReport_submitted"]
[connection signal="message_completed" from="speech" to="." method="_on_speech_message_completed"]
